--- a/client/src/components/Post.css
+++ b/client/src/components/Post.css
@@ -19,10 +19,11 @@
 }
 
 .file-label {
+  font-size: 12px;
   font-weight: 600;
   background-color: rgb(150, 150, 150);
   color: white;
 
   border-radius: 4px;
-  padding: 10px;
+  padding: 8px;
 }
