--- a/client/src/components/Feed/Feed.css
+++ b/client/src/components/Feed/Feed.css
@@ -1,13 +1,14 @@
 .post-container {
-  margin: 20px;
+  margin: 50px;
 }
 
 .post {
   position: relative;
-  height: 70vh;
-  width: 50vh;
+  height: 50vh;
+  max-width: 50vh;
   border: 1px solid gray;
   overflow: hidden;
+  border-radius: 12px;
 }
 
 .post-title-container {
@@ -29,23 +30,41 @@
 .post-caption-container {
   position: absolute;
   bottom: 0px;
-  font-size: 16px;
-  line-height: 32px;
   text-align: left;
 
-  width: 100%;
-  height: 164px;
+  width: calc(100%);
+  height: 88px;
   border-top: 1px solid rgb(180, 180, 180);
+  border-radius: 4px;
   background-color: white;
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: all .3s ease-in-out;
+}
+
+.post:hover > .post-caption-container {
+  transform: translateY(0%);
+  opacity: 0.9;
 }
 
 .post-caption {
-  padding: 16px;
+  font-size: 14px;
+  line-height: 28px;
+
+  /* Truncate text */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
 }
 
 .post-image-container {
   height: calc(100% - 64px);
   width: 100%;
+  margin-top: 64px;
 }
 
 .post-image {
