--- a/client/public/style.css
+++ b/client/public/style.css
@@ -9,8 +9,9 @@ html, body {
 }
 
 img {
-  height: auto;
-  width: 100%;
+  height: 100%;
+  width: auto;
+  user-select: none;
 }
 
 /* Top level classes for all components */
@@ -33,4 +34,28 @@ img {
 
 .absolute {
   position: absolute;
+}
+
+.bottom {
+  border-bottom: 1px solid rgb(180, 180, 180, 0.5);
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #F1F1F1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  height: 16px;
 }
