--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -1,86 +1,9 @@
-textarea {
-  width: 92%;
-  padding: 20px;
-  outline: none;
-  resize: none;
-
-  border: none;
-  border-bottom: 1px solid gray;
-  overflow: hidden;
-}
-
-.modal {
-  position: relative;
-  width: 70vh;
-  height: 70vh;
-  border: 1px solid gray;
-  border-radius: 4px;
-  background-color: white;
-
-  flex-direction: column;
-  gap: 10px;
-  
-  overflow: hidden;
-}
-
-.shadow {
-  box-shadow: 0px 2px 2px rgba(180, 180, 180, 0.5);
-}
-
-.side-panel {
-  width: 50vh;
-  height: 70vh;
-}
-
-.gap {
-  gap: 10px;
-}
-
-.file-label {
-  font-size: 12px;
-  font-weight: 600;
-  background-color: rgb(100, 100, 100);
-  color: white;
-
-  border-radius: 4px;
-  padding: 8px;
-}
-
-.delete-image {
+.delete-image-post {
   position: absolute;
-  top: 20px;
+  top: 32px;
   right: 16px;
   z-index: 10;
 
   cursor: pointer;
   color: rgb(100, 100, 100);
-}
-
-.title {
-  position: absolute;
-  top: 0px;
-  font-size: 24px;
-  font-weight: bold;
-
-  line-height: 32px;
-  height: 32px;
-}
-
-.caption {
-  margin-top: 64px;
-  font-size: 16px;
-  height: 80%;
-  border-bottom: none;
-  line-height: 32px;
-}
-
-.submit {
-  font-size: 16px;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-
-  padding: 8px 20px;
-  background-color: white;
-  border: 1px solid rgb(130, 130, 130);
 }
