--- a/client/src/components/Feed/Feed.css
+++ b/client/src/components/Feed/Feed.css
@@ -74,14 +74,14 @@
   width: auto;
 }
 
-@media (min-width: 300px) {
+@media (min-width: 0px) {
   .post-container {
-    padding: 40px;
+    padding: 96px 0 32px 0;
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: 1250px) {
   .post-container {
-    padding: 0px;
+    padding: 32px 0;
   }
 }
